<?xml version="1.0"?>
<package format="2">
  <name>zed_custom_sub_tutorial</name>
  <version>3.0.0</version>
  <description>This package is a tutorial showing how to subscribe to sensors data topic published by a ZED node</description>

  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>MIT</license>

  <url type="website">http://stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros-examples</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros-examples/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <build_depend>zed_interfaces</build_depend> 
  

  <exec_depend>zed_wrapper</exec_depend>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>zed_interfaces</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
